[Vin] - Fixed app header UI and filter alignment issues

--- a/client/src/scss/base/_common.scss
+++ b/client/src/scss/base/_common.scss
@@ -228,3 +228,7 @@ button {
   -ms-transition: all 300ms linear;
   transition: all 300ms linear;
 }
+button.disable {
+  opacity: 0.5;
+  cursor: auto;
+}
